--- a/SAMPLE/ClientApps/Vue/public/index.html
+++ b/SAMPLE/ClientApps/Vue/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>APP</title>
+    <title></title>
     <style>
       .selector-for-some-widget {
         box-sizing: content-box;
