--- a/SAMPLE/ClientApps/Vue/public/index.html
+++ b/SAMPLE/ClientApps/Vue/public/index.html
@@ -14,6 +14,7 @@
         box-sizing: content-box;
       }
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
